<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s"
    tools:context=".ForgotPassword">
    <EditText
        android:id="@+id/ename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="115dp"
        android:ems="10"

        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ename"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="46dp"
        android:ems="10"

        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/emobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="46dp"
        android:ems="10"

        android:hint="Enter Mobile"
        android:inputType="phone"
        android:textSize="20dp" />

    <Button
        android:id="@+id/verify"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/emobile"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="76dp"
        android:layout_marginRight="100dp"
        android:background="@color/black"
        android:fontFamily="monospace"
        android:text="check"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="29dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Forgot password"
        android:textSize="30dp" />
</RelativeLayout>