<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="45dp"
        android:text="Not yet registered?"
        android:textColor="@color/colorAccent"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="541dp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="username"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="161dp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="220dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="93dp"
        android:fontFamily="cursive"
        android:text="Forgot Password?"
        android:textColor="@color/black"
        android:textSize="23dp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="295dp" />

    <Button
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="82dp"
        android:layout_toRightOf="@id/textView"
        android:background="@color/black"
        android:fontFamily="monospace"
        android:text="ClickHere"
        android:textColor="@color/white"
        android:textSize="13dp"

        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/textView3"
        android:text="SignUP"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="539dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="cursive"
        android:paddingLeft="40dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="87dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_below="@id/uname"
        android:layout_marginLeft="-143dp"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@id/password"
        android:background="@color/black"
        android:fontFamily="monospace"
        android:text="login"
        android:textColor="@color/white"

        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="Next Gen Library"
        android:textColor="@color/black"
        android:textSize="40dp" />

</RelativeLayout>