<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".issuebookform"
    android:background="#696969">

    <ImageView
        android:id="@+id/img"
        android:layout_width="160sp"
        android:layout_height="220sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="90dp"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="182dp"
        android:text="From:"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="36dp"
        android:text="To:"
        android:textSize="19sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="175dp"
        android:background="#696969"
        android:text="choose" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:background="#696969"
        android:text="choose" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="80dp"

        android:background="#696969"
        android:text="request" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="27dp"
        android:textSize="20sp" />

</RelativeLayout>