...
        android:layout_toRightOf="@id/img"
        android:text="TextView"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="335dp"
        android:text="request" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="333dp"
        android:text="save" />
...
